# pklib-rs

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  deny.toml
.github/workflows/: ci.yml  cross-build.yml  release.yml  security.yml
benches/: async_performance.rs  compression.rs  concurrent.rs  decompression.rs  memory_usage.rs  round_trip.rs  test_data.rs
examples/: cli_usage.sh
src/: async_batch.rs  async_convenience.rs  async_explode.rs  async_implode.rs  async_stream.rs  common.rs  crc32.rs  error.rs  lib.rs  tables.rs
src/explode/: decoder.rs  mod.rs  reader.rs  state.rs
src/implode/: hash.rs  mod.rs  pattern.rs  state.rs  writer.rs
tests/: implode_tests.rs  pklib_compat.rs  property_tests.proptest-regressions  property_tests.rs
