[package]
name = "pklib"
version = "0.2.0"
edition = "2021"
authors = ["Daniel S. Reichenbach <daniel@kogito.network>"]
description = "Pure Rust implementation of PKWare Data Compression Library (DCL) with full PKLib compatibility"
license = "MIT"
repository = "https://github.com/danielsreichenbach/pklib-rs"
documentation = "https://docs.rs/pklib"
homepage = "https://github.com/danielsreichenbach/pklib-rs"
readme = "README.md"
keywords = ["compression", "pkware", "implode", "explode", "dcl"]
categories = ["compression", "encoding"]

[dependencies]
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"

# Async dependencies - optional feature
tokio = { version = "1.0", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
bytes = { version = "1.0", optional = true }
pin-project = { version = "1.0", optional = true }
num_cpus = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }

[features]
default = []
async = ["tokio", "futures", "bytes", "pin-project", "num_cpus", "log"]

[dev-dependencies]
hex = "0.4"
proptest = "1.6"
criterion = "0.6"
tempfile = "3.20"
# For async benchmarks
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

[[bin]]
name = "blast-cli"
path = "src/bin/blast-cli.rs"

[[bench]]
name = "async_performance"
required-features = ["async"]

[profile.release]
opt-level = 3
lto = true
